# imgcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml
src/: imgcp.spec  log.py  main.py  pyinstaller.py  timing.py
